mysql/cnp-ingress-mysql-stig-v-235146-block-unused-ports-qsdhqz4.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-ingress-mysql-stig-v-235146-block-unused-ports-mmuftev
  namespace: explorer
spec:
  description: "To block all unused ports on MySQL pod"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mysql
			controller-revision-hash: mysql-fbf7c789
			helm.sh/chart: mysql-9.1.2
			statefulset.kubernetes.io/pod-name: mysql-0
			app.kubernetes.io/instance: mysql
  ingress:
    - fromEndpoints:
      - matchLabels:
          role: frontend # Change your match labels
      toPorts:
        - ports:
            - port: "3306"
        - ports:
            - port: "33060"
